# CPPCSALab2Client

./: CMake.txt  CMakeLists.txt  CPPCSALab2Client.cpp  CPPCSALab2Client.sln  CPPCSALab2Client.vcxproj  CPPCSALab2Client.vcxproj.filters  Makefile  MyClient.cpp  Test.cpp  package.deb  users.db
.github/workflows/: build.yaml
hv/: s21_tetris_game_part.h
package/DEBIAN/: control
src/: CPPCSALab2Client  CPPCSALab2Client.cpp  MyClient.cpp  Test.cpp
